# InterSpec

./: .clang-format  .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  NOTICE.html  README.md  index.md  main.cpp  runLocalOn8080.sh  update_act_shield_fit_to_state_machine.md
external_libs/Cuba-3.0/: CMakeLists.txt  ChangeLog  config.h.in  config.status  configure  configure.ac  cuba.h  demo-c  makefile.in
external_libs/Cuba-3.0/demo/: cuba.F  demo-c.c  demo-c.out  demo-fortran.F  demo-math.m  testsuite.m
external_libs/Cuba-3.0/src/common/: CSample.c  ChiSquare.c  Erf.c  Fork.c  MSample.c  Random.c  WorkerIni.c  stddecl.h
external_libs/Cuba-3.0/src/cuhre/: Cuhre.c  Cuhre.tm  Integrate.c  Rule.c  common.c  decl.h
external_libs/Cuba-3.0/src/divonne/: Divonne.c  Divonne.tm  Explore.c  FindMinimum.c  Integrate.c  Iterate.c  KorobovCoeff.c  Rule.c  Sample.c  Split.c  common.c  decl.h
external_libs/Cuba-3.0/src/suave/: CMakeLists.txt  Fluct.c  Grid.c  Integrate.c  Sample.c  Suave.c  Suave.tm  common.c  decl.h
external_libs/Cuba-3.0/src/vegas/: Grid.c  Integrate.c  Vegas.c  Vegas.tm  common.c  decl.h
external_libs/Cuba-3.0/tools/: fcc  mcc  mkstatic  partview.cpp  partview.m  partview.pro  print.xpm  quit.xpm
external_libs/Minuit2/: CMakeLists.txt  Makefile  Makefile.in  aclocal.m4  config.h  config.status  configure  configure.in  libtool  readme.txt  wcjohns_README.md
external_libs/Minuit2/doc/: Doxyfile  Makefile  Makefile.in
external_libs/Minuit2/inc/: Makefile  Makefile.am  Makefile.in
external_libs/Minuit2/inc/Math/: Functor.h  IFunction.h  IFunctionfwd.h  Makefile  Makefile.in  Minimizer.h  WrappedFunction.h
external_libs/Minuit2/inc/Minuit2/: ABObj.h  ABProd.h  ABSum.h  ABTypes.h  AnalyticalGradientCalculator.h  BasicFunctionGradient.h  BasicFunctionMinimum.h  BasicMinimumError.h  BasicMinimumParameters.h  BasicMinimumSeed.h  BasicMinimumState.h  CombinedMinimizer.h  CombinedMinimumBuilder.h  ContoursError.h  DavidonErrorUpdator.h  FCNBase.h  FCNGradientBase.h  FumiliBuilder.h  FumiliChi2FCN.h  FumiliErrorUpdator.h  FumiliFCNAdapter.h  FumiliFCNBase.h  FumiliGradientCalculator.h  FumiliMaximumLikelihoodFCN.h  FumiliMinimizer.h  FumiliStandardChi2FCN.h  FumiliStandardMaximumLikelihoodFCN.h  FunctionGradient.h  FunctionMinimizer.h  FunctionMinimum.h  GenericFunction.h  GradientCalculator.h  HessianGradientCalculator.h  InitialGradientCalculator.h  LASymMatrix.h  LAVector.h  LaInverse.h  LaOuterProduct.h  LaProd.h  LaSum.h  (+68 more)
external_libs/Minuit2/src/: AnalyticalGradientCalculator.cxx  BasicMinimumError.cxx  CombinedMinimumBuilder.cxx  DavidonErrorUpdator.cxx  FumiliBuilder.cxx  FumiliErrorUpdator.cxx  FumiliGradientCalculator.cxx  FumiliMinimizer.cxx  FumiliStandardChi2FCN.cxx  FumiliStandardMaximumLikelihoodFCN.cxx  HessianGradientCalculator.cxx  InitialGradientCalculator.cxx  LaEigenValues.cxx  LaInnerProduct.cxx  LaInverse.cxx  LaOuterProduct.cxx  LaSumOfElements.cxx  LaVtMVSimilarity.cxx  MPIProcess.cxx  Makefile  Makefile.in  MnApplication.cxx  MnContours.cxx  MnCovarianceSqueeze.cxx  MnEigen.cxx  MnFcn.cxx  MnFumiliMinimize.cxx  MnFunctionCross.cxx  MnGlobalCorrelationCoeff.cxx  MnHesse.cxx  MnLineSearch.cxx  MnMachinePrecision.cxx  MnMinos.cxx  MnParabolaFactory.cxx  MnParameterScan.cxx  MnPlot.cxx  MnPosDef.cxx  MnPrint.cxx  MnScan.cxx  MnSeedGenerator.cxx  (+31 more)
external_libs/Minuit2/src/.deps/: AnalyticalGradientCalculator.Plo  BasicMinimumError.Plo  CombinedMinimumBuilder.Plo  DavidonErrorUpdator.Plo  FumiliBuilder.Plo  FumiliErrorUpdator.Plo  FumiliGradientCalculator.Plo  FumiliMinimizer.Plo  FumiliStandardChi2FCN.Plo  FumiliStandardMaximumLikelihoodFCN.Plo  HessianGradientCalculator.Plo  InitialGradientCalculator.Plo  LaEigenValues.Plo  LaInnerProduct.Plo  LaInverse.Plo  LaOuterProduct.Plo  LaSumOfElements.Plo  LaVtMVSimilarity.Plo  MPIProcess.Plo  MnApplication.Plo  MnContours.Plo  MnCovarianceSqueeze.Plo  MnEigen.Plo  MnFcn.Plo  MnFumiliMinimize.Plo  MnFunctionCross.Plo  MnGlobalCorrelationCoeff.Plo  MnHesse.Plo  MnLineSearch.Plo  MnMachinePrecision.Plo  MnMinos.Plo  MnParabolaFactory.Plo  MnParameterScan.Plo  MnPlot.Plo  MnPosDef.Plo  MnPrint.Plo  MnScan.Plo  MnSeedGenerator.Plo  MnStrategy.Plo  MnTiny.Plo  (+29 more)
external_libs/Minuit2/test/: Makefile  Makefile.in
external_libs/Minuit2/test/MnSim/: CMakeLists.txt  DemoFumili.cxx  DemoGaussSim.cxx  FlatRandomGen.h  GaussDataGen.cxx  GaussDataGen.h  GaussFcn.cxx  GaussFcn.h  GaussFcn2.cxx  GaussFcn2.h  GaussFunction.h  GaussRandomGen.h  GaussianModelFunction.h  Makefile  Makefile.in  ParallelTest.cxx  PaulTest.cxx  PaulTest2.cxx  PaulTest3.cxx  (+2 more)
external_libs/SpecUtils/: CMakeLists.txt  readme.txt  test_python.py
external_libs/SpecUtils/SpecUtils/: DetectiveModelFromSerial.hpp  SpecUtilsAsync.h  SpecUtils_config.h.in  SpectrumDataStructs.h  UtilityFunctions.h
external_libs/SpecUtils/src/: SpecUtilsAsync.cpp  SpectrumDataStructs.cpp  SpectrumDataStructs_py.cpp  UtilityFunctions.cpp
external_libs/SpecUtils/testing/: regression_test.cpp
external_libs/VoigtDistribution/: CMakeLists.txt  Faddeeva.hpp  Faddeeva_impl.hpp  README.md  pseudo_voigt_exp_tail.hpp  voigt_exp_tail.hpp
external_libs/VoigtDistribution/approx/: test_voigt_exp_tail_approx.cpp  voigt_exp_tail_approx.hpp
external_libs/VoigtDistribution/example/: example.cpp
external_libs/VoigtDistribution/unit_tests/: CMakeLists.txt  README.md  exact_test_data.cpp  scipy_voigt_test_data.hpp  test_faddeeva_templated.cpp  test_pseudo_voigt_exp_tail.cpp  test_voigt_against_mit_imp.cpp  test_voigt_exact.cpp  voigt_cdf_reference.hpp  voigt_distribution_tests.cpp
external_libs/muparserx-4.0.7/: CMakeLists.txt
external_libs/muparserx-4.0.7/parser/: mpOprtIndex.h  mpOprtMatrix.h  mpOprtPostfixCommon.h  mpValue.h  suSortPred.h
external_libs/sandia_decay/: CMakeLists.txt  README.txt  SandiaDecay.cpp  SandiaDecay.h
external_libs/sandia_decay/examples/: CMakeLists.txt  sandia_decay_example.cpp
external_libs/sandia_decay/tools/: CMakeLists.txt  add_tori_xray_to_xml_and_test.cpp  decay_database_benchmark.cpp  remove_edit_history.cpp
(+4189 files in other folders)
